# ChangeLog for dev-perl/regexp-common
# Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/regexp-common/ChangeLog,v 1.15 2006/01/16 21:32:12 killerfox Exp $

  16 Jan 2006; Rene Nussbaumer <killerfox@gentoo.org>
  regexp-common-2.120.ebuild:
  Stable on hppa.

  15 Jan 2006; Michael Hanselmann <hansmi@gentoo.org>
  regexp-common-2.120.ebuild:
  Stable on ppc.

  13 Jan 2006; Michael Cummings <mcummings@gentoo.org>
  regexp-common-2.120.ebuild:
  marking sparc x86 stable

  14 Oct 2005; Aron Griffis <agriffis@gentoo.org>
  regexp-common-2.120.ebuild:
  Mark 2.120 stable on alpha

  03 Oct 2005; Aron Griffis <agriffis@gentoo.org>
  regexp-common-2.120.ebuild:
  Mark 2.120 stable on ia64

  26 Aug 2005; Aron Griffis <agriffis@gentoo.org>
  regexp-common-2.120.ebuild:
  add ~ia64

  01 May 2005; Michael Hanselmann <hansmi@gentoo.org>
  regexp-common-2.113.ebuild:
  Stable on ppc.

*regexp-common-2.120 (29 Apr 2005)

  29 Apr 2005; Michael Cummings <mcummings@gentoo.org>
  regexp-common-2.113.ebuild, -regexp-common-2.117.ebuild,
  +regexp-common-2.120.ebuild:
  Cleaning for mirror syntax

  22 Apr 2005; Simon Stelling <blubb@gentoo.org> regexp-common-2.113.ebuild:
  stable on amd64

  30 Dec 2004; Ciaran McCreesh <ciaranm@gentoo.org> :
  Change encoding to UTF-8 for GLEP 31 compliance

*regexp-common-2.117 (30 Jul 2004)

  30 Jul 2004; Michael Cummings <mcummings@gentoo.org>
  +regexp-common-2.117.ebuild:
  New version on CPAN

  30 May 2004; Bryan Østergaard <kloeri@gentoo.org>
  regexp-common-2.113.ebuild:
  Stable on alpha.

  30 Dec 2003; Michael Cummings,,, <mcummings@gentoo.org>
  regexp-common-2.113.ebuild:
  Tested on x86 and sparc

*regexp-common-2.113 (29 Jul 2003)

  29 Jul 2003; Michael Cummings <mcummings@gentoo.org>
  regexp-common-2.113.ebuild:
  bug 24875 dep for request tracker - Celestial Wizard
  <gentoo@dev.celestialwizard.org>
