@@ -1,17 +1,0 @@
-# Copyright 1999-2005 Gentoo Foundation
-# Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/regexp-common/Attic/regexp-common-2.113.ebuild,v 1.10 2005/05/01 18:15:03 hansmi Exp $
-
-inherit perl-module
-
-MY_P=Regexp-Common-${PV}
-S=${WORKDIR}/${MY_P}
-
-DESCRIPTION="Provide commonly requested regular expressions"
-HOMEPAGE="http://www.cpan.org/authors/id/A/AB/ABIGAIL/"
-SRC_URI="mirror://cpan/authors/id/A/AB/ABIGAIL/${MY_P}.tar.gz"
-
-LICENSE="|| ( Artistic GPL-2 )"
-SLOT="0"
-KEYWORDS="x86 ppc sparc alpha hppa amd64"
-IUSE=""
