@@ -1,6 +1,6 @@
 # Copyright 1999-2006 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/regexp-common/Attic/regexp-common-2.120.ebuild,v 1.7 2006/01/16 21:32:12 killerfox Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/regexp-common/Attic/regexp-common-2.120.ebuild,v 1.8 2006/03/17 20:27:41 chriswhite Exp $
 
 inherit perl-module
 
@@ -11,7 +11,9 @@ DESCRIPTION="Provide commonly requested regular expressions"
 HOMEPAGE="http://www.cpan.org/authors/id/A/AB/ABIGAIL/"
 SRC_URI="mirror://cpan/authors/id/A/AB/ABIGAIL/${MY_P}.tar.gz"
 
+SRC_TEST="do"
+
 LICENSE="|| ( Artistic GPL-2 )"
 SLOT="0"
-KEYWORDS="alpha ~amd64 hppa ia64 ppc sparc x86"
+KEYWORDS="alpha amd64 hppa ia64 ppc sparc x86"
 IUSE=""
